public/css/login.css
.login-form-wrapper{
  position: absolute;
  height: 100%; width: 100%;
  background-color: #1f2128;
  overflow:hidden;
  z-index: 2;
}

.bg-graphics{
  position: absolute;
  height: 100vw; width: 100vw;
  border-radius: 50%;
  border: 150px solid #262932;
  background-color:#2b2f38;
  top: -100%; left: -50%;
}

.login-form, .color-picker{
  position: absolute;
  border-radius: 20px;
  background-color: #16181d;
  box-shadow: -5px 8px 4px -2px rgba(0,0,0,0.2);
}

.login-form, .login-form-content, .color-picker-items{
  top: 50%; left: 50%;
  transform: translate(-50%,-50%);
}

.login-form       { height: 425px; width: 300px;}
.login-form, .login-form input, button{ color: #f8f8f8; }
.login-form h1    { font-size: 40px; }
.login-form input { padding-left: 20px;}


.color-picker{
  height: fit-content; width: 80px;
  left: 315px;
}

.coloritem{
  width: 20px;
  height: 20px;
  border-radius: 50%;
  float: left;
  margin: 10px;
}

.login-form-content{
  position: absolute;
  height: 85%; width: 85%;
  text-align: center;
}

#user-preview{ 
  height: fit-content; width: 100%;
  margin: 20px 0 20px 0; 
}

.login-form input, button{
  box-sizing: border-box;
  height: 50px; width: 100%;
  outline: none;
  border: none;
  border-radius: 50px;
  margin-top: 15px;
  font-size: 30px;
  background-color: #2b2f38;
}

::placeholder{
  color: #686e78;
  opacity: 1;
}

button:active{ background-color: #202227;}

